rename GitHub to Code: better for understanding

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="card-buttons">
               <a href="https://www.teses.usp.br/teses/disponiveis/64/64133/tde-22052025-110836/en.php" class="btn white" target="_blank">Thesis</a>
               <a href="https://github.com/labbces/sugarcane_RNAome" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -89,7 +89,7 @@
             <div class="card-buttons">
               <a href="docs/ISMB2022_FVP_Presentation.pdf" class="btn white" target="_blank">ISMB Talk</a>
               <a href="https://github.com/labbces/SCPT" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -118,7 +118,7 @@
             <div class="card-buttons">
               <a href="https://link.springer.com/chapter/10.1007/978-3-030-91814-9_6" class="btn white" target="_blank">Paper</a>
               <a href="https://github.com/labbces/ContFree-NGS" class="btn dark" target="_blank">
-                 GitHub
+                 Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -163,7 +163,7 @@
             <p>Nextflow pipeline for automated inference of the <i>Kappaphycus alvarezii</i> proteome through de novo transcriptome assembly and comprehensive functional annotation.</p> 
             <div class="card-buttons">
               <a href="https://github.com/felipevzps/KAPT" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -181,7 +181,7 @@
             <p>Nextflow pipeline for automated integration of transcriptomic and microbiome data, performing cross-correlation analysis to uncover potential host transcriptome-microbiome associations.</p>
             <div class="card-buttons">
               <a href="https://github.com/SantosRAC/transcriptome_microbiome_integration" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -199,7 +199,7 @@
             <p>Nextflow pipeline for scalable gene co-expression network analysis. It automates the process from data download, quantification and network construction.</p>
             <div class="card-buttons">
               <a href="https://github.com/SantosRAC/R2C" class="btn dark" target="_blank">
-                GitHub 
+                Code 
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -217,7 +217,7 @@
             <p>Metagenomics pipeline for Biosynthetic Gene Cluster discovery. Designed for identification of novel BGCs in microbiome of marine sediments.</p>
             <div class="card-buttons">
               <a href="https://github.com/felipevzps/seabed-symphony" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -236,7 +236,7 @@
             <p>Snakemake pipeline for de novo transcriptome assembly. It performs every step from raw RNA-seq data download to the final transcriptome assembly and quality assessment.</p>
             <div class="card-buttons">
               <a href="https://github.com/labbces/YAATAP" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -255,7 +255,7 @@
             <div class="card-buttons">
               <a href="newsletter/paper-trackr_newsletter.html" class="btn white" target="_blank">Demo</a>
               <a href="https://github.com/felipevzps/paper-trackr" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -284,7 +284,7 @@
             <div class="card-buttons">
               <a href="https://lbb.rsg-brazil.com/sobre" class="btn white" target="_blank">About</a>
               <a href="https://github.com/Wet-Lab-Sucks" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
@@ -303,7 +303,7 @@
             <div class="card-buttons">
               <a href="https://github.com/mendelics/lbb-mendelics-2021" class="btn white" target="_blank">About</a>
               <a href="https://github.com/felipevzps/x880rsfvj" class="btn dark" target="_blank">
-                GitHub
+                Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                   <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
                 </svg>
