new newsletter template

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <!-- PAPER TRACKER BANNER -->
     <section class="banner">
         <div class="banner-content">
-        <h1>Latest in Bioinformatics</h1>
+        <h1>Latest in Science</h1>
         <p>An app I built to track what’s shaping the field.</p>
-        <a href="newsletter/paper-trackr_newsletter.html" class="btn white" target="_blank">
+        <a href="newsletter/newsletter.html" class="btn white">
           View Recent Papers
           <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
             <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
