update demo link

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
             <h3>paper-trackr</h3>
             <p>Tired of missing out on cool papers? stay up to date with paper-trackr!</p>
             <div class="card-buttons">
-              <a href="newsletter/paper-trackr_newsletter.html" class="btn white" target="_blank">Demo</a>
+              <a href="newsletter/newsletter.html" class="btn white" target="_blank">Demo</a>
               <a href="https://github.com/felipevzps/paper-trackr" class="btn dark" target="_blank">
                 Code
                 <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
