--- a/index.html
+++ b/index.html
@@ -102,9 +102,10 @@
           <div class="composition-card-image flip-container">
             <div class="flip-inner">
               <div class="flip-front">
-                <!-- Frente: composição Pale Blue Dot -->
+                <!-- Front: pale blue dot composition -->
               </div>
               <div class="flip-back">
+                <!-- Back: flipback pale blue dot description -->
                 <div class="flip-back-text">
                   <p>"Look again at that dot. That's here. That's home. That's us." - Carl Sagan</p>
                   <p class="context-text">The Pale Blue Dot, captured by Voyager 1 in 1990, showing Earth as a tiny speck in the vastness of space, a humbling reminder of our place in the cosmos.</p>
@@ -136,7 +137,7 @@
       <div class="card-grid">
         <div class="note-card">
           <div class="note-card-image">
-            <img src="docs/F.png" alt="Tool 2" />
+            <img src="docs/F.png"/>
           </div>
           <div class="note-card-body">
             <h3>Computational Reproducibility</h3>
@@ -156,7 +157,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/A.png" alt="Tool 2" />
+            <img src="docs/A.png"/>
           </div>
           <div class="card-body">
             <h3>KAPT</h3>
@@ -174,7 +175,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/B.png" alt="Tool 2" />
+            <img src="docs/B.png"/>
           </div>
           <div class="card-body">
             <h3>T-M Integration</h3>
@@ -192,7 +193,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/D.png" alt="Tool 2" />
+            <img src="docs/D.png"/>
           </div>
           <div class="card-body">
             <h3>R2C</h3>
@@ -210,7 +211,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/I.png" alt="Tool 3" />
+            <img src="docs/I.png"/>
           </div>
           <div class="card-body">
             <h3>seabed symphony</h3>
@@ -229,7 +230,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/G.png" alt="Tool 3" />
+            <img src="docs/G.png"/>
           </div>
           <div class="card-body">
             <h3>YAATAP</h3>
@@ -247,7 +248,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/E.png" alt="Tool 3" />
+            <img src="docs/E.png"/>
           </div>
           <div class="card-body">
             <h3>paper-trackr</h3>
@@ -276,7 +277,7 @@
       <div class="card-grid">
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/lbb_2025.png" alt="Tool 2" />
+            <img src="docs/lbb_2025.png"/>
           </div>
           <div class="card-body">
             <h3>LBB 2025</h3>
@@ -295,7 +296,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/mendelics_2021.png" alt="Tool 2" />
+            <img src="docs/mendelics_2021.png"/>
           </div>
           <div class="card-body">
             <h3>Mendelics 2021</h3>
@@ -314,7 +315,7 @@
 
         <div class="oa-card">
           <div class="card-image">
-            <img src="docs/biohack_2018.png" alt="Tool 2" />
+            <img src="docs/biohack_2018.png"/>
           </div>
           <div class="card-body">
             <h3>BIOHACK 2018</h3>
