refactor css, following clean code and best practices in webdev

--- a/newsletter/newsletter.html
+++ b/newsletter/newsletter.html
@@ -4,211 +4,10 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>paper-trackr newsletter</title> <link href="../docs/photo_51.ico" rel="shortcut icon"/>
+<title>paper-trackr newsletter</title>
+<link href="../docs/photo_51.ico" rel="shortcut icon"/>
 <link href="../style.css" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&amp;display=swap" rel="stylesheet"/>
-<style>
-    body {
-      background-color: #000;
-      color: #f5f5f5;
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    .newsletter-container {
-      max-width: 80rem;
-      margin: 7rem auto;
-      padding: 0 2rem;
-      width: calc(100% - 4rem);
-    }
-
-    .newsletter-intro {
-      text-align: center;
-      margin-bottom: 5rem;
-      max-width: 700px;
-      margin: 0 auto;
-    }
-
-    .newsletter-intro h1 {
-      font-size: 1.8rem;
-      font-weight: 600;
-      padding: 7.5rem 0 4rem 0;
-    }
-
-    .newsletter-intro p {
-      color: #ccc;
-      line-height: 1.5;
-      font-size: 1rem;
-      margin-bottom: 2rem;
-      line-height: 1.5;
-      text-wrap: balance;
-      text-align: center;
-    }
-    
-    .newsletter-intro .note {
-      color: #999;
-      font-size: 1rem;
-      line-height: 1.4;
-      margin-top: 1rem;
-    }
-
-    .newsletter-intro a {
-      color: #9ae6b4;
-      font-weight: 500;
-      text-decoration: none;
-      border-bottom: 1px solid transparent;
-      transition: all 0.2s ease;
-    }
-
-    .newsletter-intro a:hover {
-      border-bottom: 1px solid #9ae6b4;
-    }
-
-    /* ===== FILTER BAR ===== */
-    .filter-bar {
-      display: flex;
-      justify-content: center;
-      gap: 1.5rem;
-      padding-bottom: 1rem;
-      margin-top: 7rem;
-      margin-bottom: 3rem;
-      flex-wrap: wrap;
-    }
-
-    .filter-btn {
-      background: none;
-      border: none;
-      color: #aaa;
-      font-size: 0.95rem;
-      font-weight: 500;
-      cursor: pointer;
-      transition: color 0.2s ease;
-      position: relative;
-    }
-
-    .filter-btn:hover {
-      color: #fff;
-    }
-
-    .filter-btn.active {
-      color: #fff;
-    }
-
-    /* Lista dos papers */
-    .papers-list {
-      display: flex;
-      flex-direction: column;
-    }
-
-    .paper {
-      display: grid;
-      grid-template-columns: 1fr 2fr;
-      gap: 2rem;
-      padding: 2rem 0;
-      border-bottom: 1px solid #222;
-      cursor: pointer;
-      transition: background-color 0.25s ease;
-    }
-
-    .paper:hover {
-      background-color: #0a0a0a;
-    }
-
-    /* Coluna esquerda */
-    .paper-meta {
-      font-size: 0.9rem;
-      color: #999;
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      gap: 0.3rem;
-      padding: 0 0 0 2rem;
-    }
-
-    .paper-meta .keyword {
-      color: #bbb;
-      font-weight: 500;
-    }
-
-    .paper-meta .date {
-      color: #888;
-    }
-
-    .paper-meta .journal {
-      color: #777;
-      font-style: italic;
-    }
-
-    /* Coluna direita */
-    .paper-content {
-      display: flex;
-      flex-direction: column;
-      padding: 0 2rem 0 0;
-    }
-
-    .paper-title {
-      font-size: 1rem;
-      font-weight: 600;
-      color: #fff;
-      margin-bottom: 0.4rem;
-    }
-
-    .paper-authors {
-      font-size: 0.9rem;
-      color: #bbb;
-      margin-bottom: 0.8rem;
-    }
-
-    .paper-tldr {
-      color: #ddd;
-      font-size: 0.9rem;
-      line-height: 1.5;
-    }
-
-    .paper-abstract {
-      display: none;
-      margin-top: 1rem;
-      color: #aaa;
-      line-height: 1.6;
-      font-size: 0.9rem;
-      animation: fadeIn 0.3s ease;
-    }
-
-    .paper.expanded .paper-abstract {
-      display: block;
-    }
-
-    .btn {
-    display: inline-flex;
-    margin-top: 1rem;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    flex: 1;
-    border-radius: 999px;
-    font-size: 0.8rem;
-    font-weight: var(--bold-font);
-    cursor: pointer;
-    border: none;
-    transition: all 0.2s ease;
-    gap: 0.4rem;
-    }
-    
-    .btn.dark {
-    background: var(--btn-bg-dark);
-    color: var(--btn-text-dark);
-    }
-
-    .btn.dark:hover {
-    background: #2a2a2a;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-  </style>
 </head>
 <body>
 <aside class="sidebar">
@@ -227,13 +26,13 @@
 <section class="newsletter-intro">
 <h1>Latest in Science</h1>
 <p>
-      Hello, welcome to your daily dose of research!<br/> 
-      Here you'll find the most recent papers published yesterday, filtered for the topics I follow.
+        Hello, welcome to your daily dose of research!<br/> 
+        Here you'll find the most recent papers published yesterday, filtered for the topics I follow.
       </p>
 <p class="note">
 <small>
-        * The curation is done automatically by my open-source project, <a href="https://github.com/felipevzps/paper-trackr" target="_blank">paper-trackr</a>.<br/>
-        Want your own results? Install it via PyPI and get personalized updates!
+          * The curation is done automatically by my open-source project, <a href="https://github.com/felipevzps/paper-trackr" target="_blank">paper-trackr</a>.<br/>
+          Want your own results? Install it via PyPI and get personalized updates!
         </small>
 </p>
 </section>
