add software dev description

--- a/index.html
+++ b/index.html
@@ -257,7 +257,10 @@
             <div class="note-card-image"><img src="docs/F.png" alt="Software Development"/></div>
             <div class="note-card-body">
               <h3>Software Development</h3>
-              <p>Creating open-source tools and applications that solve real-world problems in computational biology and bioinformatics. Designed for accessibility, scientific rigor, and user experience.</p>
+              <p>My path into software development began in the biological sciences. Working with the massive datasets produced by modern sequencing technologies, I quickly realized that understanding biology in the twenty-first century requires far more than laboratory skills, it demands the ability to design, automate, and scale analyses across terabytes of information. What began as a necessity soon became a passion.</p>
+              <p>I am deeply committed to the principles of <i>Free and Open Source Software (FOSS)</i> and enjoy contributing to and learning from open-source communities. Several of my projects and tools are freely available online, reflecting my belief that scientific progress is best achieved through transparency and collaboration.</p>
+              <p>My daily work environment revolves around Linux systems, I currently use Arch Linux as my daily driver distribution (<i>yes, I use Arch, btw</i> - <a href="https://github.com/felipevzps/dotfiles/wiki/Arch-Linux-(Hyprland)" target="_blank">feel free to take a look at my rice!</a>).</p>
+              <p>This section showcases my ongoing dedication to building free and open source software.</p>
             </div>
           </div>
 
