--- a/index.html
+++ b/index.html
@@ -70,9 +70,8 @@
               <h3>AI in Medicine</h3>
               <p>Over the past few years, machine learning has shown extraordinary potential in capturing the complex, non-linear relationships underlying various cancers. Yet, achieving real clinical impact requires more than high accuracy, it demands <i>interpretability</i> and <i>external validation</i>.</p>
               <p>I am particularly interested in how we can design transparent and explainable models that allow us to understand not only <i>what</i> a model predicts, but also <i>how</i> it arrives at its decisions, ensuring they can be trusted and meaningfully interpreted by clinicians.</p>
-              <p>Moreover, cancer data are heterogeneous by nature, shaped by differences in populations. Ensuring that models perform reliably beyond their training environments is essential for both scientific rigor and patient safety. As a community, embracing external validation as a standard practice is key to advancing from promising prototypes to clinically deployable tools that can truly save lives.</p>
-              <p>My current work builds on this philosophy. This section highlights ongoing efforts toward developing transparent, validated, and clinically meaningful models for cancer research.</p>
-
+              <p>Moreover, cancer data are heterogeneous by nature, shaped by differences in populations. Ensuring that models perform reliably beyond their training environments is fundamental for both scientific rigor and patient safety.</p>
+              <p>My current work at <a href="huna-ai.com">Huna</a> builds on this philosophy. This section highlights ongoing efforts toward developing transparent, validated, and clinically meaningful models for cancer research.</p>
             </div>
           </div>
 
@@ -110,9 +109,9 @@
             <div class="note-card-body">
               <h3>Sugarcane Pan-omics</h3> 
               <p>In the last decade, the rise of massively parallel sequencing technologies in genomics and transcriptomics has revealed that the concepts of pan-genome and pan-transcriptome, once thought to be restricted to prokaryotes, are also applicable to eukaryotes. This discovery reshaped our understanding of genetic diversity, showing that not all individuals within a species share the same set of genes.</p>
-              <p>This section highlights my two contributions to sugarcane omics research, conducted at the <a href="https://labbces.cena.usp.br/" target="_blank">Computational, Evolutionary, and Systems Biology Laboratory</a>. In our first study, we built the <i>sugarcane pan-transcriptome</i> and revealed the variability in protein-coding transcripts across 50 genotypes. 
-              
-              <p>Interestingly, many sugarcane transcripts were found to be <i>non-coding</i>, which led us to a new question: <i>what are their functions?</i> During my master’s, I explored a multi-genotype catalog of <i>long non-coding RNAs (lncRNAs)</i>, investigating their expression and co-expression networks. These studies aim to fill the knowledge gaps between <i>coding and non-coding RNAs in sugarcane</i>, providing a broader view of transcript variability and potential functional roles across diverse genetic backgrounds.</p>
+              <p>This section highlights my two contributions to sugarcane pan-omics research, conducted at the <a href="https://labbces.cena.usp.br/" target="_blank">Computational, Evolutionary, and Systems Biology Laboratory</a>. In our first study, we built the <i>sugarcane pan-transcriptome</i> and revealed the variability in protein-coding transcripts across 50 genotypes. 
+              <p>Interestingly, many sugarcane transcripts were found to be non-coding RNAs (ncRNAs), raising fundamental questions about this complex polyploid crop: <i>How many ncRNAs are present in the sugarcane? What is the extent of their diversity? What roles might they play in gene regulation, development, or stress responses?</i></p>
+              <p>During my master’s, I explored a multi-genotype catalog of ncRNAs, investigating their expression and co-expression networks. Together, these studies aim to fill the knowledge gaps between coding and non-coding RNAs in sugarcane, providing a broader view of transcript variability and potential functional roles across diverse genetic backgrounds.</p>
             </div>
           </div>
 
