--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
               <h3>R2C</h3>
               <p>Nextflow pipeline for scalable gene co-expression network analysis. It automates the process from data download, quantification and network construction.</p>
               <div class="card-buttons">
-                <a href="https://github.com/SantosRAC/transcriptome_microbiome_integration" class="btn dark" target="_blank">
+                <a href="https://github.com/SantosRAC/R2C" class="btn dark" target="_blank">
                   Code
                   <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                     <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -195,7 +195,7 @@
               <h3>seabed symphony</h3>
               <p>Metagenomics pipeline for Biosynthetic Gene Cluster discovery. Designed for identification of novel BGCs in microbiome of marine sediments.</p>
               <div class="card-buttons">
-                <a href="https://github.com/SantosRAC/transcriptome_microbiome_integration" class="btn dark" target="_blank">
+                <a href="https://github.com/felipevzps/seabed-symphony" class="btn dark" target="_blank">
                   Code
                   <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
                     <path d="M1.70985 4.5H7.7804M7.7804 4.5V10.5705M7.7804 4.5L0.780396 11.5" stroke="currentColor" stroke-width="1.3" stroke-linecap="round" stroke-linejoin="round"></path>
@@ -239,7 +239,7 @@
           </div>
 
             <div class="oa-card">
-              <div class="card-image"><img src="docs/N.png"/></div>
+              <div class="card-image"><img src="docs/Z.png"/></div>
             <div class="card-body">
               <h3>ContFree-NGS</h3>
               <p>A lightweight, open-source tool designed to remove contaminant sequences from NGS datasets.</p>
