--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <h3>ContFree-NGS</h3>
               <p>A lightweight, open-source tool designed to remove contaminant sequences from NGS datasets.</p>
               <div class="card-buttons">
-                <a href="https://link.springer.com/chapter/10.1007/978-3-030-91814-9_6" class="btn white" target="_blank">Paper</a>
+                <a href="docs/contfree-ngs_2021.pdf" class="btn white" target="_blank">Paper</a>
                 <a href="https://github.com/labbces/ContFree-NGS" class="btn dark" target="_blank">
                   Code
                   <svg width="11" viewBox="0 0 11 12" fill="none" xmlns="http://www.w3.org/2000/svg" style="width: 0.85rem; height: 0.85rem;">
