--- a/newsletter/template_newsletter.html
+++ b/newsletter/template_newsletter.html
@@ -26,7 +26,7 @@
       <h1>Latest in Science</h1>
       <p>
         Hello, welcome to your daily dose of research!<br> 
-        Here you'll find the most recent papers published yesterday, filtered for the topics I follow.
+        Here you'll find some papers published yesterday, filtered for the topics I follow.
       </p>
       <p class="note">
         <small>
