--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
             </div>
             <div class="note-card-body">
               <h3>Sugarcane Pan-omics</h3>
-              <p>This section highlights my two contributions to sugarcane pan-omics research, conducted at the <a href="https://labbces.cena.usp.br/" target="_blank">Computational, Evolutionary, and Systems Biology Laboratory</a>. In our first study, we built the sugarcane pan-transcriptome and revealed the variability in protein-coding transcripts across 50 genotypes. 
+              <p>This section highlights my two contributions to sugarcane pan-omics research, conducted at the <a href="https://labbces.cena.usp.br/" target="_blank">Computational, Evolutionary, and Systems Biology Laboratory</a>. In our first study, we built the sugarcane pan-transcriptome and revealed the variability in protein-coding transcripts across 50 genotypes. However, a substantial portion of the transcriptome, the non-coding RNAs, remained unexplored.</p> 
 
-              <p>Interestingly, many sugarcane transcripts were found to be non-coding RNAs (ncRNAs), raising fundamental questions: <i>How many ncRNAs are present in the sugarcane? What is the landscape of their diversity? What roles might they play in gene regulation, development, or stress responses?</i></p>
+              <p>Despite ncRNAs representing a significant fraction of the transcriptome in most organisms, studies in sugarcane remain limited. This gap raised fundamental questions: <i>How many ncRNAs are present in the sugarcane? What is the landscape of their diversity across genotypes? What roles might they play in gene regulation, development, or stress responses?</i></p>
 
               <p>During my master’s, I explored a multi-genotype catalog of ncRNAs, investigating their expression and co-expression networks. Together, these studies aim to fill the knowledge gaps between coding and ncRNAs in sugarcane, providing a broader view of transcript variability and potential functional roles across diverse genetic backgrounds.</p>
             </div>
