--- a/index.html
+++ b/index.html
@@ -53,10 +53,9 @@
     <section id="research" class="section">
       <h2 class="section-title">Research</h2>
       <p class="section-description">
-        Here you can find the main topics that have shaped my scientific work over the years. Each project represents a different stage in this journey, sometimes exploring biological questions through data, and other times developing the computational tools required to answer them.
+        Here you can find the main topics that have shaped my scientific work over the years.<br> 
+        Each project represents a different stage in this journey, sometimes exploring biological questions through data, and other times developing the computational tools required to answer them.
       </p>
-
-      <p class="section-description">Use the filters below to explore specific areas of interest.</p>
 
       <!-- Filter Bar -->
       <div class="filter-bar" id="researchFilterBar"></div>
@@ -72,9 +71,9 @@
               <h3>Sugarcane Pan-omics</h3>
               <p>This section highlights my two contributions to sugarcane pan-omics research, conducted at the <a href="https://labbces.cena.usp.br/" target="_blank">Computational, Evolutionary, and Systems Biology Laboratory</a>. In our first study, we built the sugarcane pan-transcriptome and revealed the variability in protein-coding transcripts across 50 genotypes. However, a substantial portion of the transcriptome, the non-coding RNAs, remained unexplored.</p> 
 
-              <p>Despite ncRNAs representing a significant fraction of the transcriptome in most organisms, studies in sugarcane remain limited. This gap raised fundamental questions: <i>How many ncRNAs are present in the sugarcane? What is the landscape of their diversity across genotypes? What roles might they play in gene regulation, development, or stress responses?</i></p>
+              <p>Despite ncRNAs representing a significant fraction of eukaryotic transcriptomes, their abundance, diversity, and functional relevance in surgarcane are still poorly characterized.</p>
 
-              <p>During my master’s, I explored a multi-genotype catalog of ncRNAs, investigating their expression and co-expression networks. Together, these studies aim to fill the knowledge gaps between coding and ncRNAs in sugarcane, providing a broader view of transcript variability and potential functional roles across diverse genetic backgrounds.</p>
+              <p>During my master’s, I constructed a multi-genotype ncRNA catalog and analyzed their expression and co-expression networks. Together, these studies integrate coding and non-coding RNAs, expanding our understanding of transcriptomic diversity and highlighting potential functional roles of ncRNA across diverse genetic backgrounds.</p>
             </div>
           </div>
 
@@ -133,7 +132,7 @@
             <div class="note-card-image"><img src="docs/F.png" alt="Computational Reproducibility"/></div>
             <div class="note-card-body">
               <h3>Computational Reproducibility</h3>
-              <p>Ensuring reproducibility remains one of the major challenges in computational biology and data science. Despite the growing availability of large-scale biological and experimental datasets, many published results cannot be easily replicated due to issues such as incomplete documentation, non-standardized workflows, missing metadata, or dependence on specific computing environments. Whether in the context of gene expression studies or predictive modeling, transparent and reproducible computational practices are essential for building confidence in scientific results.</p>
+              <p>Ensuring reproducibility remains one of the major challenges in computational biology and data science. Despite the growing availability of large-scale datasets, many published results are difficult to replicate due to incomplete documentation, non-standardized workflows, missing metadata, or dependence on specific computing environment. Whether in the context of gene expression studies or predictive modeling, transparent and reproducible practices are essential for building confidence in scientific results.</p>
 
               <p>In my work I focus on developing robust, efficient, and reproducible workflows that adhere to the open science and FAIR principles <i>(Findable, Accessible, Interoperable, and Reusable)</i>.</p>
               
@@ -278,7 +277,8 @@
     <!-- HACKATHON SECTION -->
     <section id="hackathon" class="section">
       <h2 class="section-title">Hackathon</h2>
-      <p class="section-description">I see hackathons as the ultimate proving ground. It’s where collaborative coding meets high-level problem solving. Working under intense pressure doesn't just forge innovative solutions, it forces a rapid, real-time exchange of scientific and technical knowledge. Beyond the code, these sprints deliver the most valuable result for us: a network of brilliant people and lifelong friends who share a passion for building the future.</p>
+      <p class="section-description">I see hackathons as the ultimate proving ground, where collaborative coding meets high-level problem solving. <br>
+      Beyond the code, these sprints deliver what I value most: a network of brilliant comrades who share a genuine passion for building the future.</p>
       <p class="section-description">Below are some of my most rewarding hackathon experiences.</p>
 
       <div class="card-grid">
